# classify

./: .gitignore  .prettierrc.json  .rulebook  AGENTS.md  CHANGELOG.md  README.md  STATUS.md  check-neo4j-count.sh  clear-databases.sh  coverage-report.txt  eslint.config.js  package-lock.json  package.json  project-map.cypher  tsconfig.json  tsup.config.ts  vitest.config.ts
docs/: API_REFERENCE.md  ARCHITECTURE.md  CACHE.md  CONFIGURATION.md  INTEGRATION.md  INTEGRATIONS.md  LLM_PROVIDERS.md  STATUS.md  TEMPLATE_SPECIFICATION.md
examples/: README.md  convert-and-classify.ts  map-project-example.ts
openspec/: project.md
samples/code/config/: Cargo.toml  build.sh  docker-compose.yml  package.json  test_auth.py
schemas/: classify-template-tiny-v1.json  classify-template-v1.json
scripts/: check-counts.sh  clear-and-reindex.sh  compare-templates.ps1  test-10-documents.ts  test-batch.ts  test-cache.ts  test-one-file.ts  view-results.html
src/: client.ts  index.ts  types.ts
temp-test-1761593037422/: invalid.ts
templates/: README.md  TEMPLATES.md  academic_paper.json  accounting.json  base.json  hr.json  index.json  marketing.json  product.json  sales.json  strategic.json  test-selector.js
test-documents/: 01-legal-contract.md  02-financial-report.md  03-hr-job-posting.md  06-compliance-policy.md  07-sales-proposal.md  09-customer-support-ticket.md  10-investor-update.md
test-results/: 01-legal-contract-result.json  02-financial-report-result.json  03-hr-job-posting-result.json  04-engineering-spec-result.json  05-marketing-campaign-result.json  06-compliance-policy-result.json  07-sales-proposal-result.json  08-product-roadmap-result.json  09-customer-support-ticket-result.json  README.md  summary.json  (+1 more)
(+202 files in other folders)
